chore: openai key env파일에 설정

--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,7 @@ $RECYCLE.BIN/
 
 # etc
 HELP.md
+.env
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij+all,visualstudiocode,java,react
 
